# compshs

./: .coveragerc  .editorconfig  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: ci_checks.yml  wheels_build.yml
compshs/: __init__.py
compshs/utils/: __init__.py  check.py
compshs/utils/tests/: test_check.py
docs/source/: conf.py  first_steps.rst  index.rst
docs/source/reference/: utils.rst
