[build-system]
requires = [
    "numpy",
    "setuptools",
    "wheel",
    "pytest-runner",
]
build-backend = "setuptools.build_meta"


[project]
name = "compshs"
version = "0.0.1"
dependencies = []
authors = [{name = "CompSHS team"}]
maintainers = [{name = "Simon Delarue", email = "simon.delarue@telecom-paris.fr"}]
description = "Computational Social Sciences"
readme = "README.rst"
license = {text = "BSD License"}
keywords = ["compshs"]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
requires-python = ">= 3.9"

[project]
packages = ["compshs"]

[project.optional-dependencies]
test = ["pytest",
        "note",
        "pluggy>=0.7.1",
        "tqdm>=4.64",
        "sphinx==5.0.2",
        "sphinx_rtd_theme==1.0",
        "numpydoc==1.4.0",
        "flake8==4.0.1",
        "pytest-runner>=5.3.1",
        "pytest>=6.2.5",
        "pytest-cov>=3.0.0",
        "pip==23.3.1",
        "bumpversion==0.6",
        "wheel==0.38.2"
]

[project.urls]
Repository = "https://github.com/compshs-team/compshs"
Documentation = "https://compshs.readthedocs.io/"
Changelog = "https://github.com/compshs-team/compshs/blob/master/HISTORY.rst"
